# testProject

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MANUAL.md  README.md  main.cpp
config/: params.xml
libs/collector/: CMakeLists.txt
libs/collector/include/collector/: collector.h
libs/collector/source/: collector.cpp
libs/context/: CMakeLists.txt
libs/context/include/context/: context.h  parsercontext.h
libs/context/source/: parsercontext.cpp
libs/controller/: CMakeLists.txt  unittest.cmake
libs/controller/include/controller/: controller.h
libs/controller/source/: controller.cpp
libs/controller/test/: controllerTest.cpp
libs/controller/test/config/: conf.cmake  params.xml
libs/database/: CMakeLists.txt  unittest.cmake
libs/database/include/database/: database.h
libs/database/source/: database.cpp
libs/database/test/: databaseTest.cpp
libs/database/test/config/: conf.cmake  params.xml
libs/generator/: CMakeLists.txt  README.md
libs/generator/include/generator/: generator.h
libs/generator/source/: generator.cpp
libs/generator/test/: generatorTest.cpp
libs/parser/: CMakeLists.txt
libs/parser/include/parser/: configuration.h  stringparser.h  xmlconfig.h
libs/parser/source/: xmlconfig.cpp
